add base period variable to see if we can get rid of error that is occuring
Signed-off-by: Kit Ex Machina <machinekit@beaglebone.localdomain>

--- a/configs/ARM/BeagleBone/RosettaBoneGecko/RosettaBoneGecko.ini
+++ b/configs/ARM/BeagleBone/RosettaBoneGecko/RosettaBoneGecko.ini
@@ -97,6 +97,9 @@ COMM_TIMEOUT =          1.0
 # Interval between tries to emcmot, in seconds
 COMM_WAIT =             0.010
 
+
+BASE_PERIOD = 110000
+
 # Servo task period, in nanoseconds
 SERVO_PERIOD =          1000000
 
