Change Pru Period(Appears to run without error)
Signed-off-by: Kit Ex Machina <machinekit@beaglebone.localdomain>

--- a/configs/ARM/BeagleBone/RosettaBoneGecko/RosettaBoneGecko.ini
+++ b/configs/ARM/BeagleBone/RosettaBoneGecko/RosettaBoneGecko.ini
@@ -1,6 +1,6 @@
 [PRUCONF]
 DRIVER=hal_pru_generic
-CONFIG=pru=1 num_stepgens=4
+CONFIG=pru=1 num_stepgens=4 pru_period=5000
 PRUBIN=xenomai/pru_generic.bin
 
 [EMC]
@@ -12,6 +12,7 @@ MACHINE =               RosettaBoneGecko
 #DEBUG =                0x00000003
 #DEBUG =                0x00000007
 DEBUG = 0
+
 
 
 
