--- a/configs/ARM/BeagleBone/RosettaBoneGecko/RosettaBoneGecko.ini
+++ b/configs/ARM/BeagleBone/RosettaBoneGecko/RosettaBoneGecko.ini
@@ -168,7 +168,7 @@ MIN_FERROR = 0.05
 HOME =                  0.000
 HOME_OFFSET =           0.00
 HOME_SEARCH_VEL =       -.1
-HOME_LATCH_VEL =       0.2
+HOME_LATCH_VEL =       0.1
 #HOME_USE_INDEX =        YES
 #HOME_IGNORE_LIMITS =    YES
 #HOME_IS_SHARED = 1
@@ -229,7 +229,7 @@ MIN_FERROR = 0.05
 HOME =                  0.000
 HOME_OFFSET =           0.00
 HOME_SEARCH_VEL =       -.1
-HOME_LATCH_VEL =       0.2
+HOME_LATCH_VEL =       0.1
 #HOME_USE_INDEX =        YES
 #HOME_IGNORE_LIMITS =    YES
 #HOME_IS_SHARED = 1
@@ -289,8 +289,10 @@ MIN_FERROR = 0.05
 
 HOME =                  0.000
 HOME_OFFSET =           0.00
-HOME_SEARCH_VEL =       -.1
-HOME_LATCH_VEL =       0.2
+#dsw HOME_SEARCH_VEL =       -.1
+#dsw HOME_LATCH_VEL =       0.2
+HOME_SEARCH_VEL =       .1
+HOME_LATCH_VEL =       -0.1
 #HOME_USE_INDEX =        YES
 #HOME_IGNORE_LIMITS =    YES
 #HOME_IS_SHARED = 1
