Hardware endstops configured on x,y,z Software limits defined on x only still need to be worked out for y,z
Signed-off-by: Kit Ex Machina <machinekit@beaglebone.localdomain>

--- a/configs/ARM/BeagleBone/RosettaBoneGecko/RosettaBoneGecko.ini
+++ b/configs/ARM/BeagleBone/RosettaBoneGecko/RosettaBoneGecko.ini
@@ -160,7 +160,7 @@ BACKLASH =           0.000
 SCALE =  40000
 
 MIN_LIMIT =             -0.0
-MAX_LIMIT =             20.0
+MAX_LIMIT =              9.1
 
 FERROR =     .1
 MIN_FERROR = 0.05
@@ -170,8 +170,8 @@ HOME_OFFSET =           0.00
 HOME_SEARCH_VEL =       -.1
 HOME_LATCH_VEL =       0.1
 #HOME_USE_INDEX =        YES
-#HOME_IGNORE_LIMITS =    YES
-#HOME_IS_SHARED = 1
+HOME_IGNORE_LIMITS =    YES
+HOME_IS_SHARED = 1
 #HOME_SEQUENCE = 2
 
 # these are in nanoseconds
