--- a/configs/ARM/BeagleBone/RosettaBoneGecko/RosettaBoneGecko.ini
+++ b/configs/ARM/BeagleBone/RosettaBoneGecko/RosettaBoneGecko.ini
@@ -221,7 +221,8 @@ BACKLASH =           0.000
 SCALE =  75000
 
 MIN_LIMIT =             -0.0
-MAX_LIMIT =             20.0
+MAX_LIMIT =              3.14
+# TJM physical switch at 3.193
 
 FERROR =     .1
 MIN_FERROR = 0.05
@@ -231,8 +232,8 @@ HOME_OFFSET =           0.00
 HOME_SEARCH_VEL =       -.1
 HOME_LATCH_VEL =       0.1
 #HOME_USE_INDEX =        YES
-#HOME_IGNORE_LIMITS =    YES
-#HOME_IS_SHARED = 1
+HOME_IGNORE_LIMITS =    YES
+HOME_IS_SHARED = 1
 #HOME_SEQUENCE = 2
 
 # these are in nanoseconds
@@ -281,21 +282,22 @@ BACKLASH =           0.000
 # scale is 200 steps/rev * 8 mirostep * 10 tpi
 SCALE =  -30000
 
-MIN_LIMIT =             -20.0
-MAX_LIMIT =             20.0
+MIN_LIMIT =            -7.1225
+MAX_LIMIT =             0.00
 
 FERROR =     .1
 MIN_FERROR = 0.05
 
-HOME =                  0.000
-HOME_OFFSET =           0.00
+HOME =                  0.0
+HOME_OFFSET =           0.0
 #dsw HOME_SEARCH_VEL =       -.1
-#dsw HOME_LATCH_VEL =       0.2
+#dsw HOME_LATCH_VEL 
+=       0.2
 HOME_SEARCH_VEL =       .1
 HOME_LATCH_VEL =       -0.1
 #HOME_USE_INDEX =        YES
-#HOME_IGNORE_LIMITS =    YES
-#HOME_IS_SHARED = 1
+HOME_IGNORE_LIMITS =    YES
+HOME_IS_SHARED = 1
 #HOME_SEQUENCE = 2
 
 # these are in nanoseconds
