--- a/configs/ARM/BeagleBone/RosettaBoneGecko/RosettaBoneGecko.ini
+++ b/configs/ARM/BeagleBone/RosettaBoneGecko/RosettaBoneGecko.ini
@@ -57,8 +57,7 @@ INTRO_GRAPHIC =         machinekit.gif
 INTRO_TIME =            5
 
 # Increments for the JOG section
-INCREMENTS = 10 1 0.1 0.01
-
+INCREMENTS = 10 1 0.1 0.01 0.001 .0001
 
 [FILTER]
 
@@ -156,7 +155,7 @@ STEPGEN_MAX_VEL =    0.16
 STEPGEN_MAX_ACC =    18.75
 
 BACKLASH =           0.000
-# scale is 200 steps/rev * 8 mirostep * 10 tpi
+# scale is 200 steps/rev * 10 mirostep * 20 tpi
 SCALE =  40000
 
 MIN_LIMIT =             -0.0
@@ -217,7 +216,7 @@ STEPGEN_MAX_VEL =    0.16
 STEPGEN_MAX_ACC =    18.75
 
 BACKLASH =           0.000
-# scale is 200 steps/rev * 8 mirostep * 10 tpi
+# scale is 200 steps/rev * 10 mirostep * 20tpi* 30/16 Belt Reduction
 SCALE =  75000
 
 MIN_LIMIT =             -0.0
@@ -279,7 +278,7 @@ STEPGEN_MAX_VEL =    0.16
 STEPGEN_MAX_ACC =    18.75
 
 BACKLASH =           0.000
-# scale is 200 steps/rev * 8 mirostep * 10 tpi
+# scale is 200 steps/rev * 10microstep * 5 tpi *48/16
 SCALE =  -30000
 
 MIN_LIMIT =            -7.1225
