Added Backlash compensation,  added 0 to jog
Signed-off-by: Kit Ex Machina <machinekit@beaglebone.localdomain>

--- a/configs/ARM/BeagleBone/RosettaBoneGecko/RosettaBoneGecko.ini
+++ b/configs/ARM/BeagleBone/RosettaBoneGecko/RosettaBoneGecko.ini
@@ -57,7 +57,7 @@ INTRO_GRAPHIC =         machinekit.gif
 INTRO_TIME =            5
 
 # Increments for the JOG section
-INCREMENTS = 10 1 0.1 0.01 0.001 .0001
+INCREMENTS = 10 1 0.1 0.01 0.001 0.0001
 
 [FILTER]
 
@@ -154,7 +154,7 @@ MAX_ACCELERATION =   10.0
 STEPGEN_MAX_VEL =    0.16
 STEPGEN_MAX_ACC =    18.75
 
-BACKLASH =           0.000
+BACKLASH =           0.007
 # scale is 200 steps/rev * 10 mirostep * 20 tpi
 SCALE =  40000
 
@@ -215,7 +215,7 @@ MAX_ACCELERATION =   10.0
 STEPGEN_MAX_VEL =    0.16
 STEPGEN_MAX_ACC =    18.75
 
-BACKLASH =           0.000
+BACKLASH =           0.012
 # scale is 200 steps/rev * 10 mirostep * 20tpi* 30/16 Belt Reduction
 SCALE =  75000
 
